--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 .promos-mas-vendidas h1 {
   font-size: 3.5em;
   letter-spacing: 1%;
@@ -28,25 +29,6 @@
 
 .promos-mas-vendidas .row {
   margin-bottom: 1.5em; }
-
-#myModal .modal-content {
-  border: 0.1em solid #f71818;
-  border-radius: 1rem;
-  -webkit-border-radius: 1rem;
-  -moz-border-radius: 1rem;
-  -ms-border-radius: 1rem;
-  -o-border-radius: 1rem;
-  box-shadow: 12px 12px 15px 0 rgba(0, 0, 0, 0.24);
-  -webkit-box-shadow: 0 12px -50px 0 rgba(0, 0, 0, 0.24);
-  -moz-box-shadow: 0 12px -50px 0 rgba(0, 0, 0, 0.24); }
-  #myModal .modal-content .modal-header {
-    border-bottom: 0em; }
-  #myModal .modal-content .modal-body .card {
-    border: none; }
-  #myModal .modal-content .modal-body select {
-    margin: 0 1.5em 1em 0; }
-  #myModal .modal-content .modal-footer {
-    border-top: 0em; }
 
 .mas-promociones h1 {
   font-size: 3.5em;
@@ -85,9 +67,30 @@
   position: absolute;
   left: 130vh; }
 
+#myModal2 .modal-content {
+  border: 0.1em solid #f71818;
+  border-radius: 1rem;
+  -webkit-border-radius: 1rem;
+  -moz-border-radius: 1rem;
+  -ms-border-radius: 1rem;
+  -o-border-radius: 1rem;
+  box-shadow: 12px 12px 15px 0 rgba(0, 0, 0, 0.24);
+  -webkit-box-shadow: 0 12px -50px 0 rgba(0, 0, 0, 0.24);
+  -moz-box-shadow: 0 12px -50px 0 rgba(0, 0, 0, 0.24); }
+  #myModal2 .modal-content .modal-body .pizza-tamaño {
+    font-size: 1.7em; }
+  #myModal2 .modal-content .modal-body .pizza-precio {
+    font-size: 1.7em;
+    color: #f71818; }
+  #myModal2 .modal-content .modal-body .card {
+    border: none; }
+  #myModal2 .modal-content .modal-body select {
+    margin: 0 1.5em 1em 0; }
+
 .empanadas .card {
   border: none;
-  background-color: #e6e6e6; }
+  background-color: #e6e6e6;
+  border-bottom: 0.1rem solid lightgray; }
   .empanadas .card .card-title {
     font-size: 2em;
     color: #444040;
@@ -169,7 +172,7 @@ body {
   position: fixed;
   z-index: 1; }
   .navbar .logo {
-    width: 10em; }
+    width: 4em; }
   .navbar .navbar-nav {
     font-size: 2.2vh;
     position: absolute;
@@ -183,9 +186,141 @@ body {
     margin-right: 0.3em; }
   .navbar li {
     display: inline-block; }
+    .navbar li button {
+      font-size: 2.2vh;
+      padding-top: 1.5em; }
 
 .bg-light {
   background-color: #f3d435 !important; }
+
+.btn-sm {
+  color: black;
+  background-color: #e6e6e6;
+  border-color: black; }
+  .btn-sm select {
+    background-color: red; }
+
+#myModal .modal-xl {
+  width: 50%; }
+
+#myModal .modal-content {
+  border: 0.1em solid #f71818;
+  border-radius: 1rem;
+  -webkit-border-radius: 1rem;
+  -moz-border-radius: 1rem;
+  -ms-border-radius: 1rem;
+  -o-border-radius: 1rem;
+  box-shadow: 12px 12px 15px 0 rgba(0, 0, 0, 0.24);
+  -webkit-box-shadow: 0 12px -50px 0 rgba(0, 0, 0, 0.24);
+  -moz-box-shadow: 0 12px -50px 0 rgba(0, 0, 0, 0.24); }
+  #myModal .modal-content .modal-header {
+    border-bottom: 0em; }
+  #myModal .modal-content .modal-body .card {
+    border: none;
+    background-color: white; }
+    #myModal .modal-content .modal-body .card .btn-danger {
+      background-color: #f71818;
+      color: #fff;
+      background-color: #dc3545;
+      border-color: #dc3545; }
+    #myModal .modal-content .modal-body .card .card-title {
+      padding-top: 0%; }
+  #myModal .modal-content .modal-body select {
+    margin: 0 1.5em 1em 0; }
+  #myModal .modal-content .footer .btn-sm {
+    background-color: #f71818;
+    color: #fff;
+    background-color: #dc3545;
+    border-color: #dc3545; }
+
+#myModal3 .modal-content {
+  border: 0.1em solid #f71818;
+  border-radius: 1rem;
+  -webkit-border-radius: 1rem;
+  -moz-border-radius: 1rem;
+  -ms-border-radius: 1rem;
+  -o-border-radius: 1rem;
+  box-shadow: 12px 12px 15px 0 rgba(0, 0, 0, 0.24);
+  -webkit-box-shadow: 0 12px -50px 0 rgba(0, 0, 0, 0.24);
+  -moz-box-shadow: 0 12px -50px 0 rgba(0, 0, 0, 0.24); }
+  #myModal3 .modal-content .modal-body h1 {
+    font-size: 1.7em;
+    color: #f71818;
+    text-align: center; }
+  #myModal3 .modal-content .modal-body .card {
+    border: none; }
+  #myModal3 .modal-content .modal-body select {
+    margin: 0 1.5em 1em 0; }
+
+#myModal4 .modal-content {
+  border: 0.1em solid #f71818;
+  border-radius: 1rem;
+  -webkit-border-radius: 1rem;
+  -moz-border-radius: 1rem;
+  -ms-border-radius: 1rem;
+  -o-border-radius: 1rem;
+  box-shadow: 12px 12px 15px 0 rgba(0, 0, 0, 0.24);
+  -webkit-box-shadow: 0 12px -50px 0 rgba(0, 0, 0, 0.24);
+  -moz-box-shadow: 0 12px -50px 0 rgba(0, 0, 0, 0.24); }
+  #myModal4 .modal-content .modal-header h3 {
+    font-size: 1.6em;
+    color: #f71818;
+    text-align: center; }
+  #myModal4 .modal-content .modal-body input {
+    width: 100%;
+    height: 3em;
+    background-color: rgba(136, 125, 125, 0.336);
+    color: rgba(255, 255, 255, 0.7);
+    border: 0;
+    border-radius: 15px;
+    margin-top: 0.3em; }
+  #myModal4 .modal-content .footer .btn-sm {
+    background-color: #f71818;
+    color: #fff;
+    background-color: #dc3545;
+    border-color: #dc3545; }
+
+#myModal5 {
+  top: 10vh; }
+  #myModal5 .modal-content {
+    border: 0.1em solid #f71818;
+    border-radius: 1rem;
+    -webkit-border-radius: 1rem;
+    -moz-border-radius: 1rem;
+    -ms-border-radius: 1rem;
+    -o-border-radius: 1rem;
+    box-shadow: 12px 12px 15px 0 rgba(0, 0, 0, 0.24);
+    -webkit-box-shadow: 0 12px -50px 0 rgba(0, 0, 0, 0.24);
+    -moz-box-shadow: 0 12px -50px 0 rgba(0, 0, 0, 0.24); }
+    #myModal5 .modal-content .modal-header {
+      text-align: center; }
+      #myModal5 .modal-content .modal-header .nav-tabs {
+        border-bottom: none;
+        text-align: center; }
+      #myModal5 .modal-content .modal-header a {
+        margin-left: 1em;
+        color: #f71818;
+        text-decoration: none; }
+    #myModal5 .modal-content .modal-body .form-input-group {
+      text-align: center; }
+      #myModal5 .modal-content .modal-body .form-input-group input {
+        background-color: rgba(136, 125, 125, 0.336);
+        color: rgba(255, 255, 255, 0.7);
+        border: 0;
+        border-radius: 15px;
+        margin: 0.5em auto;
+        padding: 0.7em;
+        width: 75%;
+        font-weight: bold;
+        cursor: pointer;
+        opacity: 1;
+        visibility: visible;
+        -webkit-transition: all .3s ease; }
+      #myModal5 .modal-content .modal-body .form-input-group label {
+        text-transform: uppercase; }
+      #myModal5 .modal-content .modal-body .form-input-group .forgot-pass {
+        text-align: center;
+        color: #f71818; }
 
 #footer {
   padding: 4em 0 2em 0;
