--- a/scss/style.scss
+++ b/scss/style.scss
@@ -25,7 +25,7 @@ body {
 
 .navbar {
   .logo {
-    width: 10em;
+    width: 4em;
     
   }
     width: 100%;
@@ -55,6 +55,10 @@ body {
 
     li {
       display: inline-block;
+      button {
+        font-size: 2.2vh;
+        padding-top: 1.5em;
+      }
     }
    
   }
@@ -63,41 +67,259 @@ body {
     background-color:$navColor!important;
   }
 
+  .btn-sm {
+    color:black;
+    background-color: $colorFondo;
+    border-color: black;
+
+    select{
+      background-color: red;
+    }
+}
 
 
-  #footer {
-    padding: 4em 0 2em 0 ;
-    background-color:$rojo;
-    text-align: center;
-    border: 0%;
+#myModal {
+    .modal-xl {
+      width: 50%;
+    }
+    
+  .modal-content {
+      border: 0.1em solid rgba(247,24,24,1.2);
+      border-radius: 1rem;
+      -webkit-border-radius: 1rem;
+      -moz-border-radius: 1rem;
+      -ms-border-radius: 1rem;
+      -o-border-radius: 1rem;
+      box-shadow: 12px 12px 15px 0 rgba(0, 0, 0, 0.24);
+      -webkit-box-shadow:0 12px -50px 0 rgba(0, 0, 0, 0.24);
+      -moz-box-shadow: 0 12px -50px 0 rgba(0, 0, 0, 0.24);
+
+      .modal-header{
+          border-bottom: 0em;
+      }
   
-      .icons {
-      font-size: 1.25em;
-      list-style: none;
-          li {
-            display: inline-block;
+      .modal-body {
+          .card {
+              border: none;
+              background-color: white;
+
+              .btn-danger {
+                  background-color: $rojo;
+                  color: #fff;
+                  background-color: #dc3545;
+                  border-color: #dc3545;
+              }
+
+              .card-title {
+                  padding-top: 0%;
+              }
+          }
+          select {
+              margin: 0 1.5em 1em 0;
+          }
+
+          
+      }
+  
+      .footer {
+          .btn-sm {
+              background-color: $rojo;
+                  color: #fff;
+                  background-color: #dc3545;
+                  border-color: #dc3545;
+          }
+          
+         
+      }     
+  }
+}
+
+
+#myModal3 {
+    
+  .modal-content {
+      border: 0.1em solid rgba(247,24,24,1.2);
+      border-radius: 1rem;
+      -webkit-border-radius: 1rem;
+      -moz-border-radius: 1rem;
+      -ms-border-radius: 1rem;
+      -o-border-radius: 1rem;
+      box-shadow: 12px 12px 15px 0 rgba(0, 0, 0, 0.24);
+      -webkit-box-shadow:0 12px -50px 0 rgba(0, 0, 0, 0.24);
+      -moz-box-shadow: 0 12px -50px 0 rgba(0, 0, 0, 0.24);
+  
+      .modal-body {
+
+          h1 {
+              font-size: 1.7em;
+              color: $rojo;
+              text-align: center;
+          }
+          .card {
+              border: none;
+          }
+          select {
+              margin: 0 1.5em 1em 0;
+              
           }
       }
-  
-      .copyright {
-        color: white;
-        font-size: 0.8em;
-        letter-spacing: 0.225em;
-        list-style: none;
-        padding: 0;
-        text-transform: uppercase;
-  
-         li {
-          display: inline-block;
-          line-height: 1em;
-          margin-left: 1em;
-          padding-left: 1em; }
-  
-      }
-  
-      .redes-footer{
-        margin: 0.5em;
-        width: 1.5em;
-        height: 1.3em;
-      }
+         
   }
+}
+
+
+#myModal4 {
+  
+.modal-content {
+    border: 0.1em solid rgba(247,24,24,1.2);
+    border-radius: 1rem;
+    -webkit-border-radius: 1rem;
+    -moz-border-radius: 1rem;
+    -ms-border-radius: 1rem;
+    -o-border-radius: 1rem;
+    box-shadow: 12px 12px 15px 0 rgba(0, 0, 0, 0.24);
+    -webkit-box-shadow:0 12px -50px 0 rgba(0, 0, 0, 0.24);
+    -moz-box-shadow: 0 12px -50px 0 rgba(0, 0, 0, 0.24);
+    
+
+    .modal-header{
+      h3{
+        font-size: 1.6em;
+        color: $rojo;
+        text-align: center;
+      }
+    }
+
+    .modal-body {
+        
+      input {
+        width: 100%;
+        height: 3em;
+        background-color: rgba(136, 125, 125, 0.336);
+        color: rgba(256,256,256,0.7);
+        border:0;
+        border-radius: 15px;
+        margin-top: 0.3em;
+      }
+        
+    }
+
+    .footer {
+        .btn-sm {
+            background-color: $rojo;
+                color: #fff;
+                background-color: #dc3545;
+                border-color: #dc3545;
+        }
+        
+       
+    }     
+}
+}
+
+#myModal5 {
+
+  top: 10vh;
+
+  .modal-content {
+    border: 0.1em solid rgba(247,24,24,1.2);
+    border-radius: 1rem;
+    -webkit-border-radius: 1rem;
+    -moz-border-radius: 1rem;
+    -ms-border-radius: 1rem;
+    -o-border-radius: 1rem;
+    box-shadow: 12px 12px 15px 0 rgba(0, 0, 0, 0.24);
+    -webkit-box-shadow:0 12px -50px 0 rgba(0, 0, 0, 0.24);
+    -moz-box-shadow: 0 12px -50px 0 rgba(0, 0, 0, 0.24);
+
+    .modal-header {
+      text-align: center;
+  
+
+      .nav-tabs {
+        border-bottom: none; 
+        text-align: center;
+      }
+      a {
+        margin-left: 1em;
+        color:$rojo;
+        text-decoration: none;
+        
+      }
+    }
+  
+    .modal-body {
+      .form-input-group {
+        text-align: center;
+        input {
+          background-color: rgba(136, 125, 125, 0.336);
+        color: rgba(256,256,256,0.7);
+        border:0;
+        border-radius: 15px;
+        margin: 0.5em auto; 
+        padding: 0.7em;
+        width: 75%;
+        font-weight: bold;
+        cursor: pointer;
+        opacity: 1;
+        visibility: visible;
+        -webkit-transition: all .3s ease;
+        }
+
+        label {
+          text-transform: uppercase;
+          
+        }
+        .forgot-pass {
+          text-align: center;
+          color: $rojo;
+        }
+
+      }
+    }
+  }
+
+  
+
+
+}
+  
+
+#footer {
+  padding: 4em 0 2em 0 ;
+  background-color:$rojo;
+  text-align: center;
+  border: 0%;
+
+    .icons {
+    font-size: 1.25em;
+    list-style: none;
+        li {
+          display: inline-block;
+        }
+    }
+
+    .copyright {
+      color: white;
+      font-size: 0.8em;
+      letter-spacing: 0.225em;
+      list-style: none;
+      padding: 0;
+      text-transform: uppercase;
+
+       li {
+        display: inline-block;
+        line-height: 1em;
+        margin-left: 1em;
+        padding-left: 1em; }
+
+    }
+
+    .redes-footer{
+      margin: 0.5em;
+      width: 1.5em;
+      height: 1.3em;
+    }
+
+
+}
